# pythia-wrapper

./: CMakeLists.txt  README.md
private/pybindings/: module.cxx
private/pythia-wrapper/: I3PythiaWrapperModule.cxx
public/: I3PythiaWrapperModule.hh
python/: __run_pythia__.py
resources/cmnd/: neutrinoElectroweak.cmnd
